# python-project-50

./: Makefile  README.md  pyproject.toml
gendiff/: __init__.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/src/: gendiff.py  make_tree.py  parsers.py  read_file.py
gendiff/src/formatters/: index.py  plain.py  stylish.py
tests/: test_gendiff.py
tests/fixtures/: expected_json_file.json  file1_nested.yaml  file2_nested.yaml
