[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "gendiff-project"
authors = ["Mike Kolotovich"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"